Upgrade to FontAwesome 5.0.8
Remove the old FontAwesome files and replace them with the latest version; use pre-commit hooks to keep up-to-date

--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Compucast Assistant Options</title>
-	<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/fontawesome-all.min.css">
 	<style type="text/css">
 		fieldset { border:1px solid lightgray; margin:1.5em 0; padding:0.5em 1.5em 1.5em; }
 		fieldset legend { font-size:1.2em; margin-left:-0.8em; }
@@ -30,9 +30,9 @@
 			<legend>Domains connected:</legend>
 			<p>Configure which sites to enable.</p>
 			<ul>
-				<li><input value="compucast.com"><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></li>
-				<li><input value="neworleansrestaurants.com"><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></li>
-				<li><input id="domain_new" value=""><button><i class="fa fa-plus" aria-hidden="true"></i></button></li>
+				<li><input value="compucast.com"><button><i class="far fa-trash" aria-hidden="true"></i></button></li>
+				<li><input value="neworleansrestaurants.com"><button><i class="far fa-trash" aria-hidden="true"></i></button></li>
+				<li><input id="domain_new" value=""><button><i class="far fa-plus" aria-hidden="true"></i></button></li>
 			</ul>
 		</fieldset>
 		<fieldset id="login">
