--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Compucast Assitant</title>
-	<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/fontawesome-all.min.css">
 	<style type="text/css">
 
 		body { width:14em; font-size:initial; }
@@ -49,7 +49,7 @@
 		<div data-type="dual-switch" data-key="debug" data-value="undefined"></div>
 	</label>
 
-	<button id="reset"><i class="fa fa-undo" aria-hidden="true"></i> Reset domain</button>
+	<!-- <button id="reset"><i class="fal fa-undo"></i> Reset domain</button> -->
 
 	<script src="popup.js" type="text/javascript"></script>
 </body>
