Add Google Analytics debugger
Add new feature to toggle GA Debugger script on a site

--- a/popup.html
+++ b/popup.html
@@ -49,6 +49,11 @@
 		<div data-type="dual-switch" data-key="debug" data-value="undefined"></div>
 	</label>
 
+	<label>
+		<span>GA Debugger</span>
+		<div data-type="dual-switch" data-key="ga_debug" data-value="undefined"></div>
+	</label>
+
 	<!-- <button id="reset"><i class="fal fa-undo"></i> Reset domain</button> -->
 
 	<script src="popup.js" type="text/javascript"></script>
