Upgrade FontAwesome to 5.0.13 Integrate Chrome identity management

--- a/popup.html
+++ b/popup.html
@@ -54,6 +54,11 @@
 
 	<!-- <button id="reset"><i class="fal fa-undo"></i> Reset domain</button> -->
 
+
+	<button id="oauth"><i class="fal fa-undo"></i> Oauth</button>
+
+
 	<script src="popup.js" type="text/javascript"></script>
+	<script src="oauth.js" type="text/javascript"></script>
 </body>
 </html>
