Migrate from querystring parameters to HTTP headers for all domain toggles, and fix GA debug toggle

--- a/popup.html
+++ b/popup.html
@@ -31,34 +31,27 @@
 	</style>
 </head>
 <body>
-
 	<label>
-		<span>Mod_Pagespeed</span>
-		<div data-type="tri-switch" data-key="ModPagespeed" data-value="undefined"></div>
+		<span>PageSpeed</span>
+		<div data-type="tri-switch" data-key="PageSpeed"></div>
 	</label>
-
 	<label>
 		<span>Admin</span>
-		<div data-type="dual-switch" data-key="admin" data-value="undefined"></div>
+		<div data-type="dual-switch" data-key="admin"></div>
 	</label>
-
 	<label>
 		<span>Debug</span>
-		<div data-type="dual-switch" data-key="debug" data-value="undefined"></div>
+		<div data-type="dual-switch" data-key="debug"></div>
 	</label>
-
 	<label>
 		<span>GA Debugger</span>
-		<div data-type="dual-switch" data-key="ga_debug" data-value="undefined"></div>
+		<div data-type="dual-switch" data-key="ga_debug"></div>
 	</label>
 
 	<!-- <button id="reset"><i class="fal fa-undo"></i> Reset domain</button> -->
-
-
-	<button id="oauth"><i class="fal fa-undo"></i> Oauth</button>
+	<!-- <button id="oauth"><i class="fal fa-undo"></i> Oauth</button> -->
 
 
 	<script src="popup.js" type="text/javascript"></script>
-	<script src="oauth.js" type="text/javascript"></script>
 </body>
 </html>
